...
    <string name="my_profile_page">My profile page</string>
    <string name="UserCreation">User Creation</string>


    <!-- Actions -->
    <string name="login">Login</string>
    <string name="save">Save</string>
    <string name="do_not_save">Don\'t save</string>
    <string name="editmyprofile">Edit my profile</string>
    <string name="edit_profile_button_text">Edit profile</string>
    <string name="capture_video">Capture video</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="contact_musician">Contact </string> <!-- leave blank space after contact to avoid failing tests -->
...
    <string name="error_in_current_process">The app detected an error and has quit the current page. Sorry for the inconvenience.</string>
    <string name="perm_granted">Permission granted</string>
    <string name="perm_denied">Permission denied</string>
    <string name="mail_info_message">Opening mail intent</string>
    <string name="musiconnect_notification">MusiConnect Notification</string>
    <string name="musiconnect_generalnotifmessage">A musician is nearby !</string>
    <string name="age_too_low">Age is too low, please change your birth date.</string>
    <string name="cloud_upload_successful">File uploaded successfully</string>
    <string name="cloud_upload_failed">File upload failed</string>
    <string name="cloud_download_successful">File downloaded successfully</string>
    <string name="cloud_download_failed">File download failed</string>
    <string name="cloud_uploading_file">Uploading: </string>
    <string name="cloud_downloading_file">Downloading: </string>
...
